5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1716_2502.log
== TEST (2019-05-15 11:57:54) 
-- CODE:
num=int(input("numero: "))
n=0
a=12**1/2
while(n < num):
	a = a * (1/1*3**0)+n
	n = n + 1
print(round(a, 8))	
	
	
-- OUTPUT:
61.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:58:26) 
-- CODE:
num=int(input("numero: "))
n=0
a=12**1/2
while(n < num):
	a = a * (1/1*3**0)+n
	n = n + 1
print(round(a, 8))	
	
	
-- OUTPUT:
61.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:00:49) 
-- CODE:
num=int(input("numero: "))
n=0
a=0
while(n < num):
	a = a * 12 ** 1/2 * (1/1*3**0 - n)
	n = n + 1
print(round(a, 8))	
	
	
-- OUTPUT:
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:32) 
-- CODE:
num=int(input("numero: "))
cont=1
a=12**1/2
while(cont < num):
	den = (cont * 1)*(cont * 1 + 2**0)
	a = a + (-1)**(cont+1)*1/den
	cont = cont + 1
print(round(a, 8))	
	
	
-- OUTPUT:
6.38217893
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:39:34) 
-- CODE:
num=int(input("numero: "))
a=0
b=1
c=1
d=0
e=0
while(e < num):
	d += ((12)**(1/2)*((-1))/(b * (3**a)*((-1)**c))
	b+= 2
	a+= 1
	c+= 1
	e+= 1
print(round(d, 8))				
	
	
-- ERROR:
File "XXXX", line 9
    b+= 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:39:52) 
-- CODE:
num=int(input("numero: "))
a=0
b=1
c=1
d=0
e=0
while(e < num):
	d += ((12)**(1/2)*((-1))/(b * (3**a)*((-1)**c))
	b += 2
	a += 1
	c += 1
	e += 1
print(round(d, 8))				
	
	
-- ERROR:
File "XXXX", line 9
    b += 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:40:56) 
-- CODE:
num=int(input("numero: "))
a=0
b=1
c=1
d=0
e=0
while(e < num):
	d += ((12)**(1/2)*((-1))/(b * (3**a)*((-1)**c))
	b = b + 2
	a = a + 1
	c = c + 1
	e = e + 1
print(round(d, 8))				
	
	
-- ERROR:
File "XXXX", line 9
    b = b + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:41:26) 
-- CODE:
num=int(input("numero: "))
a=0
b=1
c=1
d=0
e=0
while(e < num):
	d += ((12)**(1/2)*((-1))/(b * (3**a)*((-1)**c))
	b = b + 1
	a = a + 1
	c = c + 1
	e = e + 1
print(round(d, 8))				
	
	
-- ERROR:
File "XXXX", line 9
    b = b + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:43:26) 
-- CODE:
num=int(input("numero: "))
d=0
y=1
e=1
so=0
t=0
while(t < num):
	so = so+((12)**(1/2)*((-1)/(y * (3**d)*((-1)**e))
	y = y + 2
	d = d + 1
	e = e + 1
	t = t + 1
print(round(so, 8))				
	
	
-- ERROR:
File "XXXX", line 9
    y = y + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:44:32) 
-- CODE:
num=int(input("numero: "))
d=0
y=1
e=1
so=0
t=0
while(t < num):
	so=so+((12)**(1/2)*((-1)/(y * (3**d)*((-1)**e))
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so, 8))				
	
	
-- ERROR:
File "XXXX", line 9
    y=y+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:45:11) 
-- CODE:
num=int(input("numero: "))
d=0
y=1
e=1
so=0
t=0
while(t < num):
	so=so+((12)**(1/2)*((-1)/(y * (3**d)*((-1)**e))
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so, 8))				
	
	
-- EXECUTION TIME:
0.187414
-- ERROR:
  File "/home/codebench/codes/1716/2502/main.py", line 9
    y=y+2
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:00:42) 
-- CODE:
num=int(input("numero: "))
d=0
y=1
e=1
so=0
t=0
while(t<num):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e))
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so, 8))				
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:00:56) 
-- CODE:
num=int(input("numero: "))
d=0
y=1
e=1
so=0
t=0
while(t<num):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e))
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so, 8))				
	
	
-- EXECUTION TIME:
0.226526
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
